# attendency-back

./: .dockerignore  .env.dev  .env.dev.secret  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  conftest.py  docker-compose.yml  entrypoint.sh  heroku.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
.circleci/: config.yml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
api/: urls.py
api/attendance/: serializers.py  tests.py  urls.py  views.py
api/attendance/tests/: test_serializers.py  test_views.py
attendance/: admin.py  apps.py  models.py  signals.py  tests.py
attendance/management/commands/: seed.py
attendance/migrations/: 0001_initial.py  0002_project.py  0003_meeting.py  0004_participation.py  0005_remove_participation_observations.py  0006_meeting_observations.py
attendency/: asgi.py  settings.py  urls.py  wsgi.py
csv_files/: attendance_member.csv  attendance_project.csv
