[tool.poetry]
name = "attendancy"
version = "0.1.0"
description = "API to track people attending meetings"
authors = ["M <m@mathsistor.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.5"
django-extensions = "^2.2.9"
Werkzeug = "^1.0.1"
pytest-django = "^3.9.0"
notebook = "^6.0.3"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.2.1"
djangorestframework-camel-case = "^1.1.2"
djangorestframework-jwt = "^1.11.0"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
