[tool.poetry]
name = "attendancy"
version = "0.1.0"
description = "API to track people attending meetings"
authors = ["M <m@mathsistor.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
Django = "^3.0.5"
django-extensions = "^2.2.9"
Werkzeug = "^1.0.1"
pytest-django = "^3.9.0"
notebook = "^6.0.3"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.2.1"
djangorestframework-camel-case = "^1.1.2"
djangorestframework-simplejwt = "^4.4.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = "^5.1.0"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
